--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aws-todo",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "productName": "Vue Todo with Punith",
   "author": "fury <poppunith2001@gmail.com>",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.6.5",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
